--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  email: MyString
+user1:
+  name: user1@example.com
+  password_digest: <%= BCrypt::Password.create "password" %>
 
-two:
-  name: MyString
-  email: MyString
+user2:
+  name: user2@example.com
+  password_digest: <%= BCrypt::Password.create "password" %>
